refactor: fixing match/unmatch
